--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     margin-left: 80px;
 }
 
-.headerContent .listHeader {
+ .listHeader {
     list-style-type: none;
  display:block;
 display: flex;
@@ -49,10 +49,15 @@ li .btnx{
   
 
 }
+.bookmark{
+    height: 30%;
+    
+}
 .bookmark .imageBookmark{
     margin-top: 100px;
   
    float: right; 
+   height: 30%;
 }
 
 .bookmark::before {
@@ -60,7 +65,7 @@ li .btnx{
     position: absolute;
     width: 30%;
     height: 34%;
-    border-radius: 25% 0 0 25%;
+    border-radius: 30% 0 0 50%;
     right: 0%;
     top: 50%;
     background-color: hsl(231, 69%, 60%);
@@ -72,22 +77,26 @@ li .btnx{
     margin-left: 80px;
     margin-top: 140px;
     float: left;
-    width:25%;
-    height: 40%;
+    width:45%;
+    height: 50%;
     margin-left: 80px;
 
     justify-content: center;
   }
 .bookmarkPar .pp {
+    width:400px;
+    height: 30%;
 
-    font-size: 40px;
+    font-size: 45px;
   
    
    
 }
 .bookmarkPar p{
    margin-top: 20px;
+   width:400px;
    color: rgba(128, 128, 128, 0.898);
+
    
    
 }
@@ -113,9 +122,359 @@ li .btnx{
   
   
 }
-.content{
+header:after {
     height: 40%;
+
+        content: "";
+        display: table;
+        clear: both;
+      }
+
+/* Features section starts here */
+.features{
+    padding: 1rem 7rem 6rem;
+    min-height: 100vh;
+    position: relative;
 }
-h2{
-    margin-left: 80px;
+
+.features h2{
+    text-align: center;
+    font-size: 1.8rem;
+    color: hsl(229, 31%, 21%);
+    margin-bottom: .7rem;
+}
+
+.features p{
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.3;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 1rem;
+}
+
+.features .features-controller{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.features .features-controller p{
+    padding: 1rem 2rem;
+    border-bottom: 1px solid hsla(229, 8%, 60%, 0.308);
+    position: relative;
+    cursor: pointer;
+    color: hsl(229, 31%, 21%);
+    transition: .5s;
+}
+
+.features .features-controller p:hover{
+    color: hsl(0, 94%, 66%);
+}
+
+.features .features-controller .active:after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: .15rem;
+    background: hsl(0, 94%, 66%);
+}
+
+.features .features-tab{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2rem;
+    padding: 0;
+}
+
+.features .features-tab .left-col{
+    position: relative;
+    flex-basis: 50%;
+}
+
+.features .features-tab .left-col img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.features .features-tab .left-col::after{
+    content: "";
+    position: absolute;
+    left: -10rem;
+    bottom: -4rem;
+    width: 120%;
+    height: 95%;
+    background: hsl(231, 69%, 60%);
+    z-index: -1;
+    border-top-right-radius: 30% 50%;
+    border-bottom-right-radius: 30% 50%;
+}
+
+.features .features-tab .right-col{
+    flex-basis: 40%;
+}
+
+.features .features-tab .right-col h3{
+    font-size: 1.8rem;
+    color: hsl(229, 31%, 21%);
+    margin-bottom: .7rem;
+}
+
+.features .features-tab .right-col p{
+    text-align: left;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 2rem;
+}
+
+.features .features-tab .right-col a{
+    padding: .6rem 1.2rem;
+    color: hsl(0, 0%, 100%);
+    background: hsl(231, 69%, 60%);
+    border: 2px solid hsl(231, 69%, 60%);
+    border-radius: .3rem;
+    text-decoration: none;
+    font-size: .9rem;
+    transition: .5s;
+}
+
+.features .features-tab .right-col a:hover{
+    background: transparent;
+    color: hsl(231, 69%, 60%);
+}
+/*download Section */
+.download{
+    padding: 8rem 10rem 2rem;
+    min-height: 100vh;
+}
+
+.download h2{
+    text-align: center;
+    font-size: 1.8rem;
+    color: hsl(229, 31%, 21%);
+    margin-bottom: .7rem;
+}
+.download p{
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.3;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 1rem;
+}
+.download .row{
+display: flex;
+align-items: center;
+justify-content:space-between;
+margin-top: 0rem;
+}
+.download .row .col{
+    text-align: center;
+    flex-basis: 31%;
+
+    box-shadow: 0 0 .6rem 0 hsla(228, 4%, 22%, 0.322);
+   padding: 2rem 1rem 2rem;
+   border-radius: .8rem;
+}
+.download .row .col:nth-child(2){
+    margin-top: 4rem;
+}
+.download .row .col:nth-child(3){
+    margin-top: 8rem;
+}
+
+.download .row .col img{
+    margin-bottom: 1.5rem;
+}
+.download .row .col h3{
+font-size: 1.2rem;
+color: hsl(229, 31%, 21%);
+margin-bottom: .5rem;}
+
+.download .row .col hr{
+    margin: 2rem 0 1.5rem;
+    border: 0;
+    border-bottom: 4px dotted hsl(229, 8%, 60%);
+
+}
+.download .row .col a{
+    text-decoration: none;
+    color: white;
+    background: hsl(231, 69%, 60%);
+    border: 2px solid hsl(231, 69%, 60%);
+    padding: .7rem 1.5rem;
+    border-radius: .3rem;
+    font-size: .9rem;
+    transition: .5s;
+}
+.download .row .col a:hover{
+background: transparent;
+color: hsl(231, 69%, 60%);}
+/* Frequently question */
+.question{
+    padding: 4rem 23rem;
+    text-align: center;
+}
+.question h2{
+
+    text-align: center;
+    font-size: 1.8rem;
+    color: hsl(229, 31%, 21%);
+    margin-bottom: .7rem;
+}
+.question p{
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.3;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 1rem;
+}
+.question .ques{
+    display: flex;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+.ques li{
+    width: 100%;
+    list-style: none;
+    padding: 1rem 0;
+    border-bottom: 1px solid hsl(229, 8%, 60%);
+    font-weight: 500;
+}
+.ques li:nth-child(1){
+    border-top:1px solid hsl(229, 8%, 60%);
+}
+.ques li .text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.ques li .drop-down-text{
+    display: none;
+}
+
+
+.ques li.drop-down-text p{
+    padding: 1.5rem 0 .5rem;
+    text-align: left;
+    line-height: 1.6;
+    color: hsl(229, 31%, 21%);
+    font-weight: 400;
+}
+
+.question .quesBtn{
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+    background: hsl(231, 69%, 60%);
+    padding: .6rem 1.2rem;
+    font-size: .8rem;
+    border-radius: .3rem;
+    margin-top: 2rem;
+    display: inline-block;
+
+}
+/*contact Section */
+.contact{
+    padding: 4rem 7rem;
+    background: hsl(231, 69%, 60%);
+    text-align: center;
+    color: hsl(0, 0%, 100%);
+}
+.contact h3{
+    text-transform: uppercase;
+    font-size: .8rem;
+    letter-spacing: 5px;
+    margin-bottom: 2rem;
+}
+
+.contact h4{
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1.8rem;
+}
+.contact form input{
+    position: relative;
+    padding: .7rem 5rem .7rem 1rem;
+    font-size: .8rem;
+    border: none;
+    outline: none;
+    border-radius: .2rem;
+    color: hsl(229, 31%, 21%);
+    border: 2px solid hsl(231, 69%, 60%);
+
+}
+.contact form input::placeholder{
+    color: hsl(229, 8%, 60%);
+}
+.contact form button{
+    padding: .7rem 1rem;
+    color: hsl(0, 0%, 100%);
+    border: 2px solid hsl(0, 94%, 66%);
+    background: hsl(0, 94%, 66%);
+    outline: none;
+    font-size: .8rem;
+    border-radius: .2rem;
+    margin-left: 1rem;
+    cursor: pointer;
+    transition: .5s;
+}
+footer{
+    padding: 1.5rem 7rem;
+    background: hsl(229, 31%, 21%);
+}
+
+footer nav {
+    display: flex;
+    align-items: center;
+}
+
+footer nav a img{
+    filter: invert(1) brightness(100%) hue-rotate(180deg);
+}
+
+footer nav .links{
+    flex: 1;
+    margin-left: 4rem;
+}
+
+footer nav .links li{
+    list-style: none;
+    display: inline-block;
+    margin-right: 1.5rem;
+}
+
+footer nav .links li a{
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+    text-transform: uppercase;
+    font-size: .7rem;
+    transition: .5s;
+}
+
+footer nav .links li a:hover,
+footer nav .links li a:focus{
+    color: hsl(0, 94%, 66%);
+}
+
+footer nav .social-links{
+    display: flex;
+    align-items: center;
+}
+
+footer nav .social-links li{
+    display: inline-block;
+    list-style: none;
+    margin-left: 2rem;
+}
+
+footer nav .social-links li a img{
+    filter: invert(0);
 }
